--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap");
+
 html {
   position: relative;
 }
@@ -6,6 +8,13 @@ html,
 body {
   min-height: 100%;
   min-width: 100%;
+  padding: 0;
+  margin: 0;
+  background: $color-secondary;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
 }
 
 a {
@@ -34,6 +43,7 @@ a {
 }
 
 button {
+  cursor: pointer;
   outline: none;
   border: none;
   &:hover,
