--- a/src/styles/sass/utilities/_variables.scss
+++ b/src/styles/sass/utilities/_variables.scss
@@ -12,3 +12,8 @@ $breakpoints: (
   "lg": 991px,
   "xl": 1200px,
 );
+
+$color-primary: #0d0d0d;
+$color-secondary: #202020;
+$color-tertiary: #404040;
+$color-neon: #00f0e1;
